web/styles/main.css
html{
    background: url("images/bats.gif");
    background-position: bottom;
}
body{
    font-family: sans-serif;
    width: 800px;
    background-color: #fff;
    border-color: #000;
    text-align: center;
    border: 5px black;
    margin: 0 auto;
    box-shadow: 3px 3px 3px 3px;
    
   
}
header{
    border-top: black;
    height: 75 px;
    background:linear-gradient(45deg,white,orange 75%,black);
img{
   float: left;
}
}
h1{
    font-size: 150%;
    text-indent: 50px;
    
}
h2{
    font-size: 120%;
    text-indent: 50px;
}
h3{
    font-size:165%;
    }
    h3::first-letter{
        font-size: 200%;
    }
h4{
    font-size: 100%;
}
a{
    color:orange;
    padding-bottom:5px;
}
a:hover{
    color:green;
}
ul{
  color:black;
        
    }
footer{
    font-size:75%;
    text-align: center;
    P{
        vertical-align: central
    }
    border-bottom: black;
    background:linear-gradient(45deg, black,orange 75%, white);
    height: 75px;
}

